fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Dokument verlassen",
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Startseite",
   "Drafts": "Entwürfe",
   "Search": "Suche",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Kollektionen konnten nicht geladen werden, bitte lade die App neu",
   "Start view": "Startseite",
   "Install now": "Jetzt installieren",
+  "Disconnect": "Trennen",
+  "Disconnecting": "Trenne",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Gelöschte Sammlung",
   "Untitled": "Ohne Titel",
   "Unpin": "Lospinnen",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sind Sie sicher, den Token {{ tokenName }} zu widerrufen?",
   "Disconnect integration": "Integration trennen",
   "Connected": "Verbunden",
-  "Disconnect": "Trennen",
-  "Disconnecting": "Trenne",
   "Allowed domains": "Erlaubte Domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Die Domänen, die mit SSO neue Konten erstellen dürfen. Das Ändern dieser Einstellung wirkt sich nicht auf bestehende Benutzerkonten aus.",
   "Remove domain": "Domäne entfernen",
