--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "מסמך חדש",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "בית",
   "Drafts": "טיוטות",
   "Search": "חיפוש",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Collections could not be loaded, please reload the app",
   "Start view": "תצוגת התחל",
   "Install now": "התקן עכשיו",
+  "Disconnect": "Disconnect",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "מחק אוסף",
   "Untitled": "ללא כותרת",
   "Unpin": "בטל הצמדה",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
-  "Disconnect": "Disconnect",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
