--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Dokumentum mentése",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Kezdőlap",
   "Drafts": "Piszkozatok",
   "Search": "Keresés",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
   "Install now": "Telepítés most",
+  "Disconnect": "Disconnect",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Törölt gyűjtemény",
   "Untitled": "Névtelen",
   "Unpin": "Feloldás",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
-  "Disconnect": "Disconnect",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
