--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Lascia il documento",
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Bozze",
   "Search": "Cerca",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Impossibile caricare le raccolte, per favore ricarica l'app",
   "Start view": "Schermata iniziale",
   "Install now": "Installa ora",
+  "Disconnect": "Disconnetti",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raccolte Eliminate",
   "Untitled": "Senza titolo",
   "Unpin": "Rimuovi contrassegno",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sei sicuro di voler revocare il token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connesso",
-  "Disconnect": "Disconnetti",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Domini consentiti",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "I domini che dovrebbero essere autorizzati a creare nuovi account utilizzando SSO. La modifica di questa impostazione non influisce sugli utenti esistenti.",
   "Remove domain": "Rimuovi dominio",
