--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "ドキュメントから退出する",
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
   "Drafts": "下書き",
   "Search": "検索",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "コレクションを読み込めませんでした。アプリを再読み込みしてください。",
   "Start view": "起動時の画面",
   "Install now": "インストールしています",
+  "Disconnect": "接続を解除",
+  "Disconnecting": "切断中",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "削除したコレクション",
   "Untitled": "無題のドキュメント",
   "Unpin": "ピン留めを外す",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "トークン {{ tokenName }} を失効します\nよろしいですか？",
   "Disconnect integration": "連携を解除",
   "Connected": "接続されました",
-  "Disconnect": "接続を解除",
-  "Disconnecting": "切断中",
   "Allowed domains": "許可されているドメイン",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO を使用して新しいアカウントを作成できるドメイン。この設定を変更しても、既存のユーザーには影響しません。",
   "Remove domain": "ドメインを削除",
