fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Verlaat document",
   "You have left the shared document": "U hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Startscherm",
   "Drafts": "Concepten",
   "Search": "Zoek",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
   "Install now": "Nu installeren",
+  "Disconnect": "Ontkoppel",
+  "Disconnecting": "Ontkoppelen",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Verwijderde Collectie",
   "Untitled": "Naamloos",
   "Unpin": "Losmaken",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Weet je zeker dat je de {{ tokenName }} token wilt intrekken?",
   "Disconnect integration": "Ontkoppel integratie",
   "Connected": "Verbonden",
-  "Disconnect": "Ontkoppel",
-  "Disconnecting": "Ontkoppelen",
   "Allowed domains": "Toegestane domeinen",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domeinen die moeten kunnen worden toegestaan om nieuwe accounts met behulp van SSO te maken. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
   "Remove domain": "Domein verwijderen",
