fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Opuść dokument",
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Strona Główna",
   "Drafts": "Kopie robocze",
   "Search": "Szukaj",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Nie można załadować kolekcji, proszę odświeżyć aplikację",
   "Start view": "Widok startowy",
   "Install now": "Zainstaluj teraz",
+  "Disconnect": "Rozłącz",
+  "Disconnecting": "Rozłączanie",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Usunięta kolekcja",
   "Untitled": "Bez tytułu",
   "Unpin": "Odepnij",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Czy na pewno chcesz unieważnić token {{ tokenName }}?",
   "Disconnect integration": "Rozłącz integrację",
   "Connected": "Połączono",
-  "Disconnect": "Rozłącz",
-  "Disconnecting": "Rozłączanie",
   "Allowed domains": "Dozwolone domeny",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domeny, które powinny być dozwolone do tworzenia nowych kont przy użyciu SSO. Zmiana tego ustawienia nie wpływa na istniejące konta użytkowników.",
   "Remove domain": "Usuń domenę",
