fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Leave document",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Página inicial",
   "Drafts": "Rascunhos",
   "Search": "Pesquisa",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as Coleções, recarregue a aplicação",
   "Start view": "Vista inicial",
   "Install now": "Instalar agora",
+  "Disconnect": "Desligado",
+  "Disconnecting": "A desligar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Coleção eliminada",
   "Untitled": "Sem título",
   "Unpin": "Tirar pino",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza que quer revogar o token {{ tokenName }}?",
   "Disconnect integration": "Desligar integração",
   "Connected": "Ligado",
-  "Disconnect": "Desligado",
-  "Disconnecting": "A desligar",
   "Allowed domains": "Domínios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Os domínios que devem ser autorizados a criar contas usando SSO. Alterar esta configuração não afeta as contas de utilizador existentes.",
   "Remove domain": "Remover o domínio",
