fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Lämna dokument",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
   "Drafts": "Utkast",
   "Search": "Sök",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
   "Install now": "Installera nu",
+  "Disconnect": "Koppla från",
+  "Disconnecting": "Bortkopplar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raderad samling",
   "Untitled": "Utan titel",
   "Unpin": "Lossa",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Är du säker på att du vill återkalla {{ tokenName }} -token?",
   "Disconnect integration": "Koppla från integration",
   "Connected": "Ansluten",
-  "Disconnect": "Koppla från",
-  "Disconnecting": "Bortkopplar",
   "Allowed domains": "Tillåtna domäner",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domäner som bör tillåtas att skapa nya konton med SSO. Ändra denna inställning påverkar inte befintliga användarkonton.",
   "Remove domain": "Ta bort domän",
