fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Belgeden ayrıl",
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Anasayfa",
   "Drafts": "Taslaklar",
   "Search": "Ara",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Koleksiyonlar yüklenemedi, lütfen uygulamayı yeniden yükleyin",
   "Start view": "Görünümü başlat",
   "Install now": "Şimdi yükle",
+  "Disconnect": "Bağlantıyı kes",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Silinmiş Koleksiyon",
   "Untitled": "Başlıksız",
   "Unpin": "Sabitlemeyi kaldır",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
-  "Disconnect": "Bağlantıyı kes",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
