fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Вийти з документа",
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Головна",
   "Drafts": "Чернетки",
   "Search": "Пошук",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Не вдалося завантажити колекції. Перезавантажте програму",
   "Start view": "Почати перегляд",
   "Install now": "Встановити зараз",
+  "Disconnect": "Від'єднатись",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Видалена колекція",
   "Untitled": "Без назви",
   "Unpin": "Відкріпити",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Ви впевнені, що хочете відкликати {{ tokenName }}  токен?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Підключено",
-  "Disconnect": "Від'єднатись",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Дозволені домени",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Домени, яким має бути дозволено створювати нові облікові записи за допомогою системи єдиного входу. Зміна цього параметра не впливає на наявні облікові записи користувачів.",
   "Remove domain": "Видалити домен",
