fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "离开文档",
   "You have left the shared document": "你已经离开了此共享文档",
   "Could not leave document": "无法离开文档",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "主页",
   "Drafts": "草稿箱",
   "Search": "搜索",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
   "Install now": "立即安装",
+  "Disconnect": "断开连接",
+  "Disconnecting": "正在断开连接",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "删除文档集",
   "Untitled": "无标题",
   "Unpin": "取消置顶",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "确认吊销这个 {{ tokenName }} token 吗？",
   "Disconnect integration": "断开集成",
   "Connected": "已连接",
-  "Disconnect": "断开连接",
-  "Disconnecting": "正在断开连接",
   "Allowed domains": "允许的域",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "应该允许使用 SSO 创建新帐户的域。更改此设置不会影响现有用户帐户。",
   "Remove domain": "删除域",
