fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "離開文件",
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "首頁",
   "Drafts": "草稿",
   "Search": "搜尋",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "文件集無法被載入，請重新整理 App",
   "Start view": "初始介面",
   "Install now": "立即安裝",
+  "Disconnect": "解除連結",
+  "Disconnecting": "正在中斷",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "刪除的文件集",
   "Untitled": "無標題",
   "Unpin": "取消釘選",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "您確定要撤銷 {{ tokenName }} 權杖嗎？",
   "Disconnect integration": "中斷整合",
   "Connected": "已連接",
-  "Disconnect": "解除連結",
-  "Disconnecting": "正在中斷",
   "Allowed domains": "域名白名單",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "應該要可以使用SSO建立新帳號的網域。更改這個並不會影響現有的帳號。",
   "Remove domain": "移除網域",
