fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Rời khỏi tài liệu",
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Trang chủ",
   "Drafts": "Bản nháp",
   "Search": "Tìm kiếm",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Không thể tải bộ sưu tập, vui lòng tải lại ứng dụng",
   "Start view": "Bắt đầu xem",
   "Install now": "Cài đặt ngay",
+  "Disconnect": "Ngắt kết nối",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Xóa Bộ Sưu Tập",
   "Untitled": "Chưa đặt tên",
   "Unpin": "Bỏ ghim",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Bạn có chắc chắn muốn thu hồi Token {{ tokenName }} không?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Đã kết nối",
-  "Disconnect": "Ngắt kết nối",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Các tên miền cho phép",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Các miền được phép tạo tài khoản mới bằng SSO. Việc thay đổi cài đặt này không ảnh hưởng đến các tài khoản người dùng hiện có.",
   "Remove domain": "Xóa tên miền",
