--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Sair do documento",
   "You have left the shared document": "Você deixou o documento compartilhado",
   "Could not leave document": "Não foi possível sair do documento",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Início",
   "Drafts": "Rascunhos",
   "Search": "Busca",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as coleções, recarregue o aplicativo",
   "Start view": "Visualização de início",
   "Install now": "Instalar agora",
+  "Disconnect": "Desconectar",
+  "Disconnecting": "Desconectando",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Excluir Coleção",
   "Untitled": "Sem título",
   "Unpin": "Desafixar",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza de que deseja revogar a chave de api {{ tokenName }}?",
   "Disconnect integration": "Desconectar integração",
   "Connected": "Conectado",
-  "Disconnect": "Desconectar",
-  "Disconnecting": "Desconectando",
   "Allowed domains": "Domínios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Os domínios que devem ser autorizados a criar novas contas usando SSO. Alterar esta configuração não afeta as contas de usuários existentes.",
   "Remove domain": "Remover domínio",
