fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Leave document",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Beranda",
   "Drafts": "Draf",
   "Search": "Telusuri",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Koleksi tidak dapat dimuat, harap muat ulang aplikasi",
   "Start view": "Tampilan awal",
   "Install now": "Pasang sekarang",
+  "Disconnect": "Memutuskan",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Koleksi Dihapus",
   "Untitled": "Tak Berjudul",
   "Unpin": "Unpin",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Apakah Anda yakin ingin mencabut token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Terhubung",
-  "Disconnect": "Memutuskan",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Domain yang diizinkan",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domain yang seharusnya diizinkan untuk membuat akun baru menggunakan SSO. Mengubah setelan ini tidak memengaruhi akun pengguna yang ada.",
   "Remove domain": "Hapus domain",
