fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "ذخیره سند",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "خانه",
   "Drafts": "پیش‌نویس‌ها",
   "Search": "جستجو",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "مجموعه‌ها بارگذاری نمی‌شوند، لطفاً برنامه را دوباره بارگیری کنید",
   "Start view": "نمای شروع",
   "Install now": "اکنون نصب شود",
+  "Disconnect": "قطع اتصال",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "مجموعه‌های حذف شده",
   "Untitled": "بدون عنوان",
   "Unpin": "برداشتن سنجاق",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
-  "Disconnect": "قطع اتصال",
-  "Disconnecting": "Disconnecting",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
