fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -103,6 +103,7 @@
   "Leave document": "Forlat dokument",
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "Hjem",
   "Drafts": "Utkast",
   "Search": "Søk",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "Samlinger kunne ikke lastes inn, vennligst last inn appen på nytt",
   "Start view": "Startvisning",
   "Install now": "Installer nå",
+  "Disconnect": "Koble fra",
+  "Disconnecting": "Kobler fra",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Slettet samling",
   "Untitled": "Uten tittel",
   "Unpin": "Løsne",
@@ -941,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Er du sikker på at du vil tilbakekalle {{ tokenName }} token?",
   "Disconnect integration": "Koble fra integrasjon",
   "Connected": "Tilkoblet",
-  "Disconnect": "Koble fra",
-  "Disconnecting": "Kobler fra",
   "Allowed domains": "Tillatte domener",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domenene som skal tillates å opprette nye kontoer ved bruk av SSO. Å endre denne innstillingen påvirker ikke eksisterende brukerkontoer.",
   "Remove domain": "Fjern domene",
