fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "새 API 키",
+  "Delete": "삭제",
   "Revoke": "취소",
   "Revoke API key": "API 키 해지",
   "Revoke token": "토큰 취소",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "이 컬렉션을 보관하면 컬렉션에 포함된 문서 또한 보관됩니다. 컬렉션의 문서는 더 이상 검색 결과에 표시되지 않습니다.",
   "Restore": "복원하기",
   "Collection restored": "컬렉션 복구됨",
-  "Delete": "삭제",
   "Delete collection": "컬렉션 삭제",
   "New template": "새 템플릿",
   "Delete comment": "댓글 삭제",
@@ -103,6 +103,7 @@
   "Leave document": "문서 나가기",
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
+  "Disconnect analytics": "Disconnect analytics",
   "Home": "홈",
   "Drafts": "임시 보관함",
   "Search": "검색",
@@ -194,6 +195,10 @@
   "Collections could not be loaded, please reload the app": "컬렉션을 불러올 수 없습니다. 앱을 새로고침하세요",
   "Start view": "시작 화면",
   "Install now": "지금 설치",
+  "Disconnect": "연결 해제",
+  "Disconnecting": "연결을 해제하는 중",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "삭제 된 콜렉션",
   "Untitled": "제목없음",
   "Unpin": "고정 해제",
@@ -326,12 +331,25 @@
   "Everyone in the workspace": "워크스페이스의 모든 구성원",
   "{{ count }} member": "{{ count }}명",
   "{{ count }} member_plural": "{{ count }}명",
+  "Only lowercase letters, digits and dashes allowed": "소문자, 숫자, 대시만 허용됩니다.",
+  "Sorry, this link has already been used": "죄송하지만, 이 링크는 이미 사용중입니다.",
+  "Public link copied to clipboard": "공개 링크를 클립보드에 복사했습니다",
+  "Web": "웹",
+  "Allow anyone with the link to access": "링크가 있는 모든 사람에 대해 접근 허용",
+  "Publish to internet": "인터넷에 게시",
+  "Search engine indexing": "검색 엔진 인덱싱 허용",
+  "Disable this setting to discourage search engines from indexing the page": "검색 엔진이 페이지를 인덱싱하지 못하도록 하려면 이 옵션을 비활성화 합니다",
+  "Show last modified": "최종 수정일 표시",
+  "Display the last modified timestamp on the shared page": "공유 페이지에 마지막으로 수정된 타임스탬프 표시",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "초대",
   "{{ userName }} was added to the collection": "{{ userName }} 이(가) 컬렉션에 추가되었습니다",
   "{{ count }} people added to the collection": "사용자 {{ count }} 명이 컬렉션에 추가됨",
   "{{ count }} people added to the collection_plural": "사용자 {{ count }} 명이 컬렉션에 추가됨",
   "{{ count }} people and {{ count2 }} groups added to the collection": "사용자 {{ count }} 명과 그룹 {{ count2 }} 개가 컬렉션에 추가됨",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "사용자 {{ count }} 명과 그룹 {{ count2 }} 개가 컬렉션에 추가됨",
+  "Switch to dark": "어두운테마로 변경",
+  "Switch to light": "밝은테마로 변경",
   "Add": "추가",
   "Add or invite": "추가 또는 초대",
   "Viewer": "뷰어",
@@ -356,17 +374,8 @@
   "Active <1></1> ago": "<1></1> 전에 활동",
   "Never signed in": "로그인 한 적 없음",
   "Leave": "나가기",
-  "Only lowercase letters, digits and dashes allowed": "소문자, 숫자, 대시만 허용됩니다.",
-  "Sorry, this link has already been used": "죄송하지만, 이 링크는 이미 사용중입니다.",
-  "Public link copied to clipboard": "공개 링크를 클립보드에 복사했습니다",
-  "Web": "웹",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "상위 문서인 <2>{{documentTitle}}</2> 이(가) 공유되어 있으므로 링크를 가진 사람은 누구나 접근 가능",
-  "Allow anyone with the link to access": "링크가 있는 모든 사람에 대해 접근 허용",
-  "Publish to internet": "인터넷에 게시",
-  "Search engine indexing": "검색 엔진 인덱싱 허용",
-  "Disable this setting to discourage search engines from indexing the page": "검색 엔진이 페이지를 인덱싱하지 못하도록 하려면 이 옵션을 비활성화 합니다",
-  "Show last modified": "최종 수정일 표시",
-  "Display the last modified timestamp on the shared page": "공유 페이지에 마지막으로 수정된 타임스탬프 표시",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "중첩된 문서들은 웹에 공유되지 않습니다. 공유 버튼을 토글해 액세스를 활성화하면, 미래에도 기본 동작으로 유지됩니다.",
   "{{ userName }} was added to the document": "{{ userName }} 이(가) 문서에 추가됨",
   "{{ count }} people added to the document": "{{ count }} 명이 문서에 추가됨",
@@ -571,6 +580,7 @@
   "Share link revoked": "링크 공유가 취소되었습니다.",
   "Share link copied": "공유 할 링크가 복사되었습니다.",
   "Share options": "공유 옵션",
+  "Go to collection": "Go to collection",
   "Go to document": "문서로 이동",
   "Revoke link": "링크 삭제",
   "Contents": "콘텐츠",
@@ -670,8 +680,6 @@
   "Show contents": "내용 보기",
   "available when headings are added": "제목 추가 후 사용 가능",
   "Edit {{noun}}": "{{noun}} 수정하기",
-  "Switch to dark": "어두운테마로 변경",
-  "Switch to light": "밝은테마로 변경",
   "Archived": "보관됨",
   "Save draft": "임시 저장",
   "Done editing": "수정 완료",
@@ -713,7 +721,6 @@
   "Backlinks": "백링크",
   "Close": "닫기",
   "This document is large which may affect performance": "이 문서의 크기가 커서 성능에 영향을 줄 수 있음",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 는 {{ appName }} 사용하여 문서를 공유하고 있습니다. 계속하려면 로그인하십시오.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "템플릿 <em>{{ documentTitle }}</em> 을 정말 삭제하시겠습니까?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "정말 <em>{{ documentTitle }}</em> 문서를 삭제하시겠습니까? 문서를 삭제하면 모든 이력이 삭제됩니다.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "정말 <em>{{ documentTitle }}</em> 문서를 삭제하시겠습니까? 문서를 삭제하면 모든 이력과 <em>{{ any }} 하위 문서들</em>이 삭제됩니다.",
@@ -939,8 +946,6 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} 토큰을 취소하시겠습니까?",
   "Disconnect integration": "통합 해제",
   "Connected": "연결됨",
-  "Disconnect": "연결 해제",
-  "Disconnecting": "연결을 해제하는 중",
   "Allowed domains": "허용된 도메인",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO를 사용하여 새 계정을 만들 수 있도록 허용해야 하는 도메인입니다. 이 설정을 변경해도 기존 사용자 계정에는 영향을 미치지 않습니다.",
   "Remove domain": "도메인 삭제",
@@ -1004,6 +1009,7 @@
   "Guest": "게스트",
   "Never used": "사용한 적 없음",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "{{ appName }} 애플리케이션을 삭제하시겠습니까? 삭제 후에는 취소할 수 없습니다.",
+  "Title": "Title",
   "Shared by": "~으로부터 공유됨:",
   "Date shared": "공유 날짜",
   "Last accessed": "마지막으로 액세스",
@@ -1146,6 +1152,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "템플릿을 추가해서 팀이 일관성 있고 정확한 문서를 만들도록 도와줄 수 있습니다.",
   "Alphabetical": "알파벳 순",
   "There are no templates just yet.": "템플릿이 아직 없습니다.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} 는 {{ appName }} 사용하여 문서를 공유하고 있습니다. 계속하려면 로그인하십시오.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "귀하의 이메일 주소로 확인 코드가 전송되었습니다. 워크스페이스를 영구적으로 제거하려면 아래에 코드를 입력하세요.",
   "Confirmation code": "확인 코드",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "워크스페이스 <1>{{workspaceName}}</1>를 지우면 모든 컬렉션, 문서, 유저, 관련된 데이터를 제거하고 즉시 {{appName}} 에서 로그아웃 됩니다.",
