fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -103,7 +103,7 @@
   "Leave document": "문서 나가기",
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "분석 연결 해제",
   "Home": "홈",
   "Drafts": "임시 보관함",
   "Search": "검색",
@@ -197,8 +197,8 @@
   "Install now": "지금 설치",
   "Disconnect": "연결 해제",
   "Disconnecting": "연결을 해제하는 중",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "서비스 <em>{{ service }}</em>와 통합을 해제하시겠습니까?",
+  "This will stop sending analytics events to the configured instance.": "이렇게 하면 구성된 인스턴스로 분석 이벤트가 전송되지 않습니다.",
   "Deleted Collection": "삭제 된 콜렉션",
   "Untitled": "제목없음",
   "Unpin": "고정 해제",
@@ -341,7 +341,7 @@
   "Disable this setting to discourage search engines from indexing the page": "검색 엔진이 페이지를 인덱싱하지 못하도록 하려면 이 옵션을 비활성화 합니다",
   "Show last modified": "최종 수정일 표시",
   "Display the last modified timestamp on the shared page": "공유 페이지에 마지막으로 수정된 타임스탬프 표시",
-  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
+  "All documents in this collection will be shared on the web, including any new documents added later": "이 컬렉션의 모든 문서는 나중에 추가된 새 문서를 포함하여 웹에서 공유됨",
   "Invite": "초대",
   "{{ userName }} was added to the collection": "{{ userName }} 이(가) 컬렉션에 추가되었습니다",
   "{{ count }} people added to the collection": "사용자 {{ count }} 명이 컬렉션에 추가됨",
@@ -374,8 +374,8 @@
   "Active <1></1> ago": "<1></1> 전에 활동",
   "Never signed in": "로그인 한 적 없음",
   "Leave": "나가기",
-  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
-  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "<2>{sharedParent.sourceTitle}</2> 컬렉션이 공유되어 있어, 링크를 가진 누구나 접근할 수 있음",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "상위 문서 <2>{sharedParent.sourceTitle}</2>이(가) 공유되어 있어, 링크를 가진 누구나 접근할 수 있음",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "중첩된 문서들은 웹에 공유되지 않습니다. 공유 버튼을 토글해 액세스를 활성화하면, 미래에도 기본 동작으로 유지됩니다.",
   "{{ userName }} was added to the document": "{{ userName }} 이(가) 문서에 추가됨",
   "{{ count }} people added to the document": "{{ count }} 명이 문서에 추가됨",
@@ -580,7 +580,7 @@
   "Share link revoked": "링크 공유가 취소되었습니다.",
   "Share link copied": "공유 할 링크가 복사되었습니다.",
   "Share options": "공유 옵션",
-  "Go to collection": "Go to collection",
+  "Go to collection": "컬렉션으로 이동",
   "Go to document": "문서로 이동",
   "Revoke link": "링크 삭제",
   "Contents": "콘텐츠",
@@ -1009,7 +1009,7 @@
   "Guest": "게스트",
   "Never used": "사용한 적 없음",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "{{ appName }} 애플리케이션을 삭제하시겠습니까? 삭제 후에는 취소할 수 없습니다.",
-  "Title": "Title",
+  "Title": "제목",
   "Shared by": "~으로부터 공유됨:",
   "Date shared": "공유 날짜",
   "Last accessed": "마지막으로 액세스",
